--- a/btMesh_configuration.json
+++ b/btMesh_configuration.json
@@ -5,50 +5,20 @@
     "PID": "0xf0b0",
     "VID": "0x1234",
     "CRPL": "0x0020",
-    "Features": "0x0007",
+    "Features": "0x000f",
     "Elements": [
       {
         "Name": "Primary Element",
         "Loc": "0x0000",
-        "NumS": "11",
+        "NumS": "3",
         "NumV": "0",
         "SIG Models": [
-          "1000",
-          "Generic OnOff Server",
-          "1303",
-          "Light CTL Server",
-          "1304",
-          "Light CTL Setup Server",
-          "2",
-          "Health Server",
-          "0",
+          "0x0000",
           "Configuration Server",
-          "1004",
-          "Generic Default Transition Time Server",
-          "1002",
-          "Generic Level Server",
-          "1006",
-          "Generic Power OnOff Server",
-          "1301",
-          "Light Lightness Setup Server",
-          "1007",
-          "Generic Power OnOff Setup Server",
-          "1300",
-          "Light Lightness Server"]
-        ,
-        "Vendor Models": [
-          ]
-      },
-      {
-        "Name": "Secondary Element",
-        "Loc": "0x0000",
-        "NumS": "2",
-        "NumV": "0",
-        "SIG Models": [
-          "1306",
-          "Light CTL Temperature Server",
-          "1002",
-          "Generic Level Server"]
+          "0x1001",
+          "Generic OnOff Client",
+          "0x1000",
+          "Generic OnOff Server"]
         ,
         "Vendor Models": [
           ]
@@ -56,8 +26,8 @@
     
   },
   "Memory configuration": {
-    "MAX_ELEMENTS": "2",
-    "MAX_MODELS": "13",
+    "MAX_ELEMENTS": "1",
+    "MAX_MODELS": "3",
     "MAX_APP_BINDS": "4",
     "MAX_SUBSCRIPTIONS": "4",
     "MAX_NETKEYS": "4",
