--- a/btMesh_configuration.json
+++ b/btMesh_configuration.json
@@ -10,15 +10,27 @@
       {
         "Name": "Primary Element",
         "Loc": "0x0000",
-        "NumS": "3",
+        "NumS": "9",
         "NumV": "0",
         "SIG Models": [
-          "0x0000",
-          "Configuration Server",
-          "0x1001",
+          "1001",
           "Generic OnOff Client",
-          "0x1000",
-          "Generic OnOff Server"]
+          "1000",
+          "Generic OnOff Server",
+          "1002",
+          "Generic Level Server",
+          "1302",
+          "Light Lightness Client",
+          "1300",
+          "Light Lightness Server",
+          "1008",
+          "Generic Power OnOff Client",
+          "1006",
+          "Generic Power OnOff Server",
+          "1003",
+          "Generic Level Client",
+          "0",
+          "Configuration Server"]
         ,
         "Vendor Models": [
           ]
@@ -27,7 +39,7 @@
   },
   "Memory configuration": {
     "MAX_ELEMENTS": "1",
-    "MAX_MODELS": "3",
+    "MAX_MODELS": "9",
     "MAX_APP_BINDS": "4",
     "MAX_SUBSCRIPTIONS": "4",
     "MAX_NETKEYS": "4",
